--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,23 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="static/css/common.css"></link>
     <title>Jack Sparrow</title>
-    <script src="/static/mustache.js"></script>
+    <script data-main="static/js/main.js"
+            src="static/js/lib/require.js"></script>
 </head>
 <body>
-
-hELLO
-
-<script>
-    var view = {
-        title: "Joe",
-        calc: function () {
-            return 2 + 4;
-        }
-    };
-
-    var output = Mustache.render("{{title}} spends {{calc}}", view);
-</script>
-
 </body>
 </html>
