--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,11 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="static/css/common.css"></link>
     <title>Jack Sparrow</title>
-    <script data-main="static/js/main.js"
-            src="static/js/lib/require.js"></script>
+
+    <link rel="stylesheet" href="static/css/common.css" />
+
+    <script defer src="static/js/lib/jquery-1.7.2.js"></script>
+    <script defer src="static/js/loader.js"></script>
+    <script defer src="static/js/newfoo.js"></script>
+    <noscript>
+        <meta http-equiv="Refresh" content="1;url=XXX" />
+    </noscript>
 </head>
 <body>
+Preparing for awesomeness...
 </body>
 </html>
