--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="static/css/common.css" />
 
     <script defer src="static/js/lib/jquery-1.7.2.js"></script>
-    <script defer src="static/js/mxLoad.js"></script>
-    <script defer src="static/js/newfoo.js"></script>
+    <script defer src="static/js/lib/mustache.js"></script>
+    <script defer src="static/js/fetch.js"></script>
+    <script defer src="static/js/index.js"></script>
     <noscript>
         <meta http-equiv="Refresh" content="1;url=XXX" />
     </noscript>
