WIP Image (in flux)

--- a/image.html
+++ b/image.html
@@ -1,5 +1,18 @@
-<div id="editUserPix">
+<html>
 
+<head>
+
+  <script defer src="js/lib/jquery-1.7.2.js"></script>
+	<script defer src = "js/lib/jquery.Jcrop.js"></script>
+	<script defer src = "js/crop.js"></script>
+
+  <link rel="stylesheet" href="css/lib/jquery.Jcrop.css" type="text/css" />
+
+</head>
+
+
+
+<body>
   <form id="imgUploadForm" method="POST" enctype="multipart/form-data" 
     action="http://localhost:8080/userpix">
 
