Image processing in shambles, will fix later.

--- a/image.html
+++ b/image.html
@@ -14,11 +14,11 @@
 
 <body>
   <form id="imgUploadForm" method="POST" enctype="multipart/form-data" 
-    action="http://localhost:8080/userpix">
+    action="https://localhost:8080/api/userpix">
 
 		<p>
 			Please specify file to upload:<br>
-			<input type="file" name="uploadedFile"
+			<input type="file" name="file"
 				id="uploadedFile" size="40">
 		</p>
 
